[tool.poetry]
name = "planogram-sample"
version = "0.1.0"
description = ""
authors = ["Andrea Reina <andrea@omnistream.co>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
